/*
 *
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */
syntax = "proto3";

option java_package = "com.google.apps.hellouwb.data";
option java_multiple_files = true;

enum DeviceType {
  CONTROLLER = 0;
  CONTROLEE = 1;
}

enum ConfigType {
  CONFIG_UNICAST_DS_TWR = 0;
  CONFIG_MULTICAST_DS_TWR = 1;
}

message AppSettings {
  DeviceType device_type = 1;
  string device_display_name = 2;
  string device_uuid = 3;
  ConfigType config_type = 4;
}